// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month Matches Snapshot 1`] = `
<div
  className="date-month"
>
  <span>
    Month
  </span>
  <select
    id="month-select"
  >
    <option
      value="01"
    >
      01
    </option>
    <option
      value="02"
    >
      02
    </option>
    <option
      value="03"
    >
      03
    </option>
    <option
      value="04"
    >
      04
    </option>
    <option
      value="05"
    >
      05
    </option>
    <option
      value="06"
    >
      06
    </option>
    <option
      value="07"
    >
      07
    </option>
    <option
      value="08"
    >
      08
    </option>
    <option
      value="09"
    >
      09
    </option>
    <option
      value="10"
    >
      10
    </option>
    <option
      value="11"
    >
      11
    </option>
    <option
      value="12"
    >
      12
    </option>
  </select>
</div>
`;

exports[`MonthPicker Matches Snapshot 1`] = `
Array [
  <option
    value="01"
  >
    01
  </option>,
  <option
    value="02"
  >
    02
  </option>,
  <option
    value="03"
  >
    03
  </option>,
  <option
    value="04"
  >
    04
  </option>,
  <option
    value="05"
  >
    05
  </option>,
  <option
    value="06"
  >
    06
  </option>,
  <option
    value="07"
  >
    07
  </option>,
  <option
    value="08"
  >
    08
  </option>,
  <option
    value="09"
  >
    09
  </option>,
  <option
    value="10"
  >
    10
  </option>,
  <option
    value="11"
  >
    11
  </option>,
  <option
    value="12"
  >
    12
  </option>,
]
`;

exports[`PostCode Matches Snapshot 1`] = `
<div
  className="postcode-picker"
>
  <input
    id="post-code"
    placeholder="Location"
    type="text"
  />
</div>
`;

exports[`Slider Matches Snapshot 1`] = `
<div
  className="header-stub"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-play-circle fa-w-16 "
    data-icon="play-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <p>
    Start
  </p>
</div>
`;

exports[`SubmitButton Matches Snapshot 1`] = `
<div
  className="submit-button"
>
  <button
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Year Matches Snapshot 1`] = `
<div
  className="date-year"
>
  <span>
    Year
  </span>
  <select
    defaultValue="2019"
    id="year-select"
  >
    <option
      value={2020}
    >
      2020
    </option>
    <option
      value={2019}
    >
      2019
    </option>
    <option
      value={2018}
    >
      2018
    </option>
    <option
      value={2017}
    >
      2017
    </option>
    <option
      value={2016}
    >
      2016
    </option>
    <option
      value={2015}
    >
      2015
    </option>
    <option
      value={2014}
    >
      2014
    </option>
    <option
      value={2013}
    >
      2013
    </option>
    <option
      value={2012}
    >
      2012
    </option>
    <option
      value={2011}
    >
      2011
    </option>
    <option
      value={2010}
    >
      2010
    </option>
  </select>
</div>
`;

exports[`YearPicker Matches Snapshot 1`] = `
Array [
  <option
    value="1"
  >
    1
  </option>,
  <option
    value="2"
  >
    2
  </option>,
  <option
    value="3"
  >
    3
  </option>,
  <option
    value="4"
  >
    4
  </option>,
  <option
    value="5"
  >
    5
  </option>,
]
`;
